--- a/templates/create_job.html
+++ b/templates/create_job.html
@@ -22,7 +22,7 @@
             font-size: 16px;
             cursor: pointer;
         }
-        .flash-messages {
+        .flash-messages { /* Стили для сообщений */
             list-style: none;
             padding: 0;
             margin-bottom: 15px;
@@ -42,7 +42,7 @@
             color: #721c24;
             border-color: #f5c6cb;
         }
-         .info { /* Стиль для информационных сообщений от Flask-Login */
+         .info { /* Стиль для информационных сообщений */
             background-color: #cfe2ff;
             color: #084298;
             border-color: #b6d4fe;
@@ -76,8 +76,13 @@
         <button type="submit">Сохранить Вакансию</button>
     </form>
 
-    {# TODO: Ссылка на список вакансий #}
-    <p><a href="{{ url_for('index') }}">На главную</a></p> {# Временно ссылка на главную #}
+    <p>
+        {# Ссылка на страницу списка вакансий #}
+        <a href="{{ url_for('list_jobs') }}">К списку вакансий</a>
+         |
+        {# Ссылка на главную страницу #}
+        <a href="{{ url_for('index') }}">На главную</a>
+    </p>
 
 </body>
 </html>
