Implement Job Posting Details (Details page, backend route, ownership check)

--- a/templates/list_jobs.html
+++ b/templates/list_jobs.html
@@ -62,8 +62,7 @@
         {% for job in jobs %}
             <div class="job-item">
                 {# Отображаем название вакансии. TODO: Сделать ссылкой на страницу деталей #}
-                <h3>{{ job.title }}</h3>
-                {# Отображаем дату создания #}
+                <h3><a href="{{ url_for('view_job', job_id=job.id) }}">{{ job.title }}</a></h3> {# Сделали название ссылкой на страницу деталей #}
                 <p>Создана: {{ job.created_at.strftime('%Y-%m-%d %H:%M') }}</p>
                 {# Здесь можно было бы показать часть описания или добавить кнопку/ссылку "Подробнее" #}
                 {# <p>{{ job.description[:150] }}...</p> #}
